--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .container-fluid {
     height: 100%;
-background-image: url(pawel-czerwinski-vI5XwPbGvmY-unsplash.jpg);
+/* background-image: url(pawel-czerwinski-vI5XwPbGvmY-unsplash.jpg); */
     background-size: cover;
     background-position: center;
     position: relative;
@@ -17,24 +17,9 @@ background-image: url(pawel-czerwinski-vI5XwPbGvmY-unsplash.jpg);
     min-width: 100%;
     left: 0;
     top: 0;
-    background: rgba(71, 93, 190, 0.227);
+    /* background: rgba(71, 93, 190, 0.227); */
 text-align: center;
 }
-/* .meal-wrapper {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    background: #fff;
-    text-align: center;
+.mt-0 {
+    margin-top: 0 !important;
 }
-img {
-    width: 100%;
-    display: block;
-}
-.meal-details-content {
-    margin: 2rem;
-}
-
-.meal-details-content p:not(.recipe-category) {
-    padding: 1rem 0;
-} */
